--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,6 @@
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
+DirectoryIndex index.php index.html index.htm index2.html
 
 
 ErrorDocument 403 https://sharin.gq/error/404/
-
 ErrorDocument 404 https://sharin.gq/error/404/
-
 ErrorDocument 500 https://sharin.gq/error/404/
